Bug 525955 Images added to an HTML message body now get an incorrect "attachment" disposition by default. r=bienvenu,sr=Neil